<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/qu_tipo_de_pizza_te_gustar_a_tomar"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="72dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="17dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrera1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="radioGroup"
            app:layout_constraintBottom_toTopOf="@id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <RadioButton
                android:id="@+id/optPizza1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pizza_1" />

            <RadioButton
                android:id="@+id/optPizza2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pizza_2" />

            <RadioButton
                android:id="@+id/optPizza3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pizza_3" />

            <RadioButton
                android:id="@+id/optPizza4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/pizza_4" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtPreguntaExtra"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/pregunta_extra"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPreguntaExtra">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/btnChip1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/chip1" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/btnChip2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/chip2" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/btnChip3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/chip3" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/txtPreguntaBebida"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:text="@string/preguntabebida"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            app:constraint_referenced_ids="btnBebida1,btnBebida2,btnBebida3"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPreguntaBebida" />

        <ImageView
            android:id="@+id/btnBebida1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/gatomiau"
            tools:layout_editor_absoluteY="150dp"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/btnBebida2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/gatomiau"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/btnBebida3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/gatomiau"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


